<resources>
  <string name="app_name">clown</string>
  <string name="PLEASE_SELECT_SEX">请先选择性别</string>
  <string name="save_success">保存成功</string>
  <string name="NET_ERROR">请求网络失败，请检查网络</string>
  <string name="buy">买入种子</string>
  <string name="sell">卖出种子</string>
  <string name="BACK_TIP">请再按一次返回退出</string>
  <string name="land">登  录</string>
  <string name="train_credit">培训积分</string>
  <string name="train_credit_oen">培训积分: </string>
  <string name="load_data_fail">加载数据失败</string>
  <string name="go_to_exam">考试与培训</string>
  <string name="go_to_train">推广资料</string>
  <string name="train_credit_system">培训积分制度</string>
  <string name="train_system">培训积分制度</string>
  <string name="train_system_introduce">培训积分制度介绍</string>
  <string name="train_system_new">I AM CLOWN 培训积分制度</string>
  <string-array name="always_problems">
    <item>什么是直推？</item>
    <item>除了直推，还有什么会影响升级？</item>
    <item>什么是培训积分？</item>
    <item>如何获取培训积分</item>
  </string-array>
  <string name="get">获取</string>
  <string name="data_tranfer">转码日期</string>
  <string name="about_we">关于我们</string>
  <string name="train">培训</string>
  <string name="train_system_one">1、在平台的”培训“频道，完成各种考试，或发起培训，都会获得培训积分。</string>
  <string name="train_system_two">2、上传推广资料，通过平台审核，则获得3-12的培训积分。</string>
  <string name="train_system1">1、 在平台的《培训》频道，完成各种考试，会获得培训积分。</string>
  <string name="train_system3">3、 上传推广资料，通过平台审核，则获得3-12培训积分。</string>
  <string name="train_system2">2、 M5及M5以上会员在平台的《培训》频道里上传培训资料(视频/音频)，通过审核将获得5-15个培训积分。一个计时周期内至少上传一个通过审核的培训资料，否则下个计时周期内将冻结资金背包的提现。</string>
  <string name="train_system_three">2、上传推广资料，通过平台审核，也会获得培训积分。</string>
  <string name="credit_list">积分制度</string>
  <string name="credit_record">积分记录</string>
  <string name="credit_record_oone">培训积分记录</string>
  <string name="current_train_credit">当前培训积分</string>
  <string name="my_current_train_credit">我当前的培训积分</string>
  <string name="committing">提交数据中...</string>
  <string name="register">注  册</string>
  <string name="pingjia_success">评价成功</string>
  <string name="publish_pinlun">发表评论</string>
  <string name="give_stars">综合对方的付款时间、态度，给他打个分吧！</string>
  <string name="give_stars_buy">综合对方的确认收款时间、态度，给他打个分吧！</string>
  <string name="new_user">注册新会员</string>
  <string name="use_guize">使用规则</string>
  <string name="use_guize_one">使用规则</string>
  <string name="use_guize_two">使用协议</string>
  <string name="your_nickname">您的昵称</string>
  <string name="input_open_bank">请输入开户行</string>
  <string name="user_name">用      户      名</string>
  <string name="user_name_no_space">用户名</string>
  <string name="user_namess">用户名</string>
  <string name="new_account">同意并创建账号</string>
  <string name="account">账&#160;&#160;&#160;&#160;&#160;&#160;户 ：</string>
  <string name="input_user_name">请输入您的用户名</string>
  <string name="name">姓&#160;&#160;&#160;&#160;名</string>
  <string name="name1">姓&#160;&#160;&#160;&#160;&#160;&#160;名 ：</string>
  <string name="use_declare">我已阅读并同意《我是小丑用户协议》、《我是小丑使用规则》</string>
  <string name="use_declare_one">我已阅读并同意《我是小丑用户协议》</string>
  <string name="use_declare_ones">《我是小丑使用规则》</string>
  <string name="land_pwd">登录密码</string>
  <string name="phone_number">手机号码</string>
  <string name="phone_numbers">手机号</string>
  <string name="update_land_pwd">修改登录密码</string>
  <string name="update_pay_pwd">修改支付密码</string>
  <string name="update_safe_pwd">修改安全密码</string>
  <string name="phone_check">手机验证码</string>
  <string name="send">发送</string>
  <string name="new_land_pwd">请输入新密码</string>
  <string name="new_land_pwd_second">再次输入新密码</string>
  <string name="old_land_pwd">请输入原密码</string>
  <string name="old_pwd">原密码</string>
  <string name="confim_pwd">确认密码</string>
  <string name="new_pay_pwd">新支付密码</string>
  <string name="old_pay_pwd">原支付密码</string>
  <string name="old_pay_pwd_one">请输入原支付密码</string>
  <string name="confim">确&#160;&#160;定</string>
  <string name="update_login_password_confirm">确认</string>
  <string name="confim_no_space">确定</string>
  <string name="account_bank">开  户  行 </string>
  <string name="open_account_bank">开  户  行 ：</string>
  <string name="car_code">银行账号</string>
  <string name="input_bank_code">请输入银行代码</string>
  <string name="input_car_code">请输入银行卡号</string>
  <string name="input_card_number">请输入银行账号</string>
  <string name="check_code">手机验证码</string>
  <string name="area">+62</string>
  <string name="send_check_code">发送</string>
  <string name="check_code_one">验证码</string>
  <string name="register_success">恭喜您，账号注册成功！</string>
  <string name="register_success_one">恭喜您，账号创建成功！</string>
  <string name="next_step">但需要完成以下4步简单的基本设置，不然无法进入我们的主页哦！</string>
  <string name="btn_next">下一步</string>
  <string name="active_oen_step">Step 1 激活账户</string>
  <string name="active_two_step">Step 2 设置支付密码</string>
  <string name="active_three_step">Step 3 填写真实姓名</string>
  <string name="active_four_step">Step 4 绑定银行卡</string>
  <string name="active_oen_info">请联系推荐人激活账户，激活后点击下一步</string>
  <string name="active_two_info">账号已成功激活！\n 请设置您的支付密码，不要泄露</string>
  <string name="active_two_info_two">请设置您的支付密码，不要泄露</string>
  <string name="active_three_info">已成功设定支付密码，请填写真实姓名</string>
  <string name="active_user_first">您的账户没有激活</string>
  <string name="six_pwd">6位数字</string>
  <string name="active_two_comfim_info">请再次输入您的支付密码</string>
  <string name="btn_ok">确  定</string>
  <string name="real_name">用 户 名</string>
  <string name="active_sucess">账户已激活成功!</string>
  <string name="input_real_name">请填写您的真实姓名，填写后不可修改！</string>
  <string name="input_real_name_one">填写您的真实姓名后不可修改</string>
  <string name="please_choose_bank">请选择银行名称</string>
  <string name="step_tips">提醒：填写后不可更改，并只能绑定填写的姓名所持有的银行账户和银行卡</string>
  <string name="step_tips_oen">填写后不可更改，并只能绑定填写的姓名所持的银行账户。</string>
  <string name="complete">完    成</string>
  <string name="complete_normal">完成</string>
  <string name="input_real_name_two">请输入真实姓名</string>
  <string name="bank_name">银行名称</string>
  <string name="card_bank_name">银行卡名称</string>
  <string name="choose_bank">请选择银行</string>
  <string name="input_bank">请输入开户行名称</string>
  <string name="complete_tips">请务必确保银行信息正确，如因错误的银行信息导致收不到款，会员自行承担责任。</string>
  <string name="active_complete">恭喜您，注册并激活成功！ \n 现在，请前往设置您的账户！</string>
  <string name="active_complete_one">恭喜您，账户注册并激活成功！</string>
  <string name="go_to_set">立即前往设置</string>
  <string name="acc">立即前往设置</string>
  <string name="please_choosen_bank_card">请选择银行卡</string>
  <string name="commit">提&#160;&#160;交</string>
  <string name="commits">提交</string>
  <string name="go_to_main_page">跳过进入首页</string>
  <string name="go_to_main_page_new">进入首页</string>
  <string name="forget_pwd">忘记密码</string>
  <string name="find_pwd">找回密码</string>
  <string name="reset_forget_pwd">重置密码</string>
  <string name="wo_want_donate">我要捐赠</string>
  <string name="wo_want_donate_one">我要捐款</string>
  <string name="servicer">客服</string>
  <string name="vip_level">会员级别</string>
  <string name="vip_dengji">会员等级</string>
  <string name="credit_grade_record">我的信用评分记录</string>
  <string name="credit_grade_record_title">信用评分记录</string>
  <string name="credit_grade_system">信用评分制度</string>
  <string name="my_current_credit_grade">我的当前信用评分</string>
  <string name="current_credit">当前信用评分</string>
  <string name="credit_grade">信用评分</string>
  <string name="credit_grade_one">信用评分: </string>
  <string name="upgrade_condition">升级条件</string>
  <string name="current_member_level">当前会员等级：</string>
  <string name="m2_tps">直推有3个M1</string>
  <string name="m3_tips">直推有3个M2</string>
  <string name="m4_tips">直推有3个M3</string>
  <string name="m5_tips">直推有3个M4</string>
  <string name="m6_tips">直推有3个M5</string>
  <string name="m7_tips">直推有3个M6</string>
  <string name="m1_tips">至少完成一笔交易(打款被确定)的新注册用户</string>
  <string name="look_my_team">查看我的团队</string>
  <string name="select_country">选择国家</string>
  <string name="i_am_user">我是小丑用户协议</string>
  <string name="input_pwd">不少于8位数，包含至少1位数字和字母</string>
  <string name="data">日期</string>
  <string name="trade_vip">交易会员</string>
  <string name="trade_type">交易类型</string>
  <string name="vip_id">会员ID</string>
  <string name="input_vip_id">请输入会员ID号</string>
  <string name="transfer_active_size">转码个数</string>
  <string name="transfer_code">转 码</string>
  <string name="all_count">总数 ：</string>
  <string name="trade_object">交易对象</string>
  <string name="trade_size">数量(个)</string>
  <string name="input_transfer_active_size">请输入转码个数</string>
  <string name="safe_pwd">安全密码</string>
  <string name="input_safe_pwd">请输入安全密码</string>
  <string name="fragment_cuihuaji">需要购买激活码的会员，请联系领导人</string>
  <string name="sow_seeds">播下的种子(颗)</string>
  <string name="growing_gain_seeds">成长获得的种子(颗)</string>
  <string name="trade_seeds">交易的种子(颗)</string>
  <string name="buy_text_one">待匹配</string>
  <string name="buy_text_two">待付款</string>
  <string name="buy_text_three">待确认</string>
  <string name="buy_text_four">待评价</string>
  <string name="order_id">订单编号</string>
  <string name="seed_count_new">种子数量</string>
  <string name="dream_seeds_count">背包中种子数量&#160;(PCS)</string>
  <string name="integration_record_time">时间</string>
  <string name="integration_record_way">方式</string>
  <string name="integration_record_score">积分</string>
  <string name="input_your_land_name_one1">请输入6-20位字母和数字组成</string>
  <string name="please_input_check">请输入验证码</string>
  <string name="look_more">查看更多</string>
  <string name="get_check_code">获取验证码</string>
</resources>