<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/fragment_cuihuaji"
        android:textColor="@color/black"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        >

        <TextView
            style="@style/active_code_first_text_style_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/vip_id"/>


        <TextView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@color/transparency_light_black"/>

        <EditText
            android:id="@+id/et_vip_id"
            style="@style/active_code_first_input_text_style_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/input_vip_id"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/transparency_light_black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        >

        <TextView
            style="@style/active_code_first_text_style_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/transfer_active_size"
            />

        <TextView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@color/transparency_light_black"/>


        <EditText
            android:id="@+id/et_active_code_size"
            style="@style/active_code_first_input_text_style_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/input_transfer_active_size"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/transparency_light_black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        >

        <TextView
            style="@style/active_code_first_text_style_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/safe_pwd"
            />

        <TextView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@color/transparency_light_black"/>

        <EditText
            android:id="@+id/et_safe_pwd"
            style="@style/active_code_first_input_text_style_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/input_safe_pwd"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/transparency_light_black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="40dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/transfer_btn"
            style="@style/btn_selector"
            android:layout_width="130dp"
            android:layout_height="37dp"
            android:layout_gravity="center_vertical"
            android:text="@string/transfer_code"
            android:textColor="@color/blue_white_selector"
            android:textSize="16sp"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_all_count"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/all_count"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/tv_data_click"
            style="@style/dream_package_text_style_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/data"/>


        <TextView
            android:id="@+id/tv_order_id_click"
            style="@style/dream_package_text_style_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/trade_object"/>

        <TextView
            android:id="@+id/tv_trade_vip_click"
            style="@style/dream_package_text_style_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/trade_size"/>

    </LinearLayout>

</LinearLayout>