<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/activity_register"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
  android:orientation="vertical">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="23dp"
    android:background="@color/chead" />

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="44dp"
      android:gravity="center"
      android:text="@string/new_user"
      android:textColor="#000"
      android:textSize="17sp" />

    <ImageView
      android:id="@+id/iv_back"
      android:layout_width="22dp"
      android:layout_height="18dp"
      android:layout_marginLeft="12dp"
      android:layout_gravity="center_vertical"
      android:src="@mipmap/icon_back_gray" />

    <TextView
      android:id="@+id/tv_back"
      android:layout_width="40dp"
      android:layout_height="24dp"
      android:layout_marginLeft="12dp"
      android:layout_gravity="center_vertical"
      android:background="@color/transparenc_all"
      android:visibility="gone" />


  </FrameLayout>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="10dp"
    android:background="@color/cf6f6f6" />


  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:background="@color/white">

    <LinearLayout
      android:id="@+id/ll_user_name"
      android:layout_width="match_parent"
      android:layout_height="44dp"
      android:orientation="horizontal">

      <TextView
        style="@style/land_text_sty"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/user_name_no_space" />


      <EditText
        android:id="@+id/user_name_input"
        style="@style/land_et_sty"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="@null"
        android:hint="@string/input_your_land_name_one1" />

    </LinearLayout>

    <TextView
      android:id="@+id/line"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_below="@+id/ll_user_name"
      android:background="@color/cf6f6f6" />

    <LinearLayout
      android:id="@+id/ll_pwd"
      android:layout_width="match_parent"
      android:layout_height="44dp"
      android:layout_below="@+id/line"
      android:orientation="horizontal">

      <TextView
        style="@style/land_text_sty"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/land_pwd" />

      <EditText
        android:id="@+id/user_pwd_input"
        style="@style/land_et_sty"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="@null"
        android:hint="@string/input_pwd" />

    </LinearLayout>

    <TextView
      android:id="@+id/line_two"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_below="@+id/ll_pwd"
      android:background="@color/cf6f6f6" />

    <LinearLayout
      android:id="@+id/ll_phone"
      android:layout_width="match_parent"
      android:layout_height="44dp"
      android:layout_below="@+id/line_two"
      android:orientation="horizontal">


      <TextView
        style="@style/land_text_sty"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/phone_number" />

      <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="horizontal">
        <TextView
          android:id="@+id/tv_country_number"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_marginLeft="15dp"
          android:gravity="center"
          android:text="@string/area"
          android:textColor="@color/cb6b6b6"
          android:textSize="11sp" />


        <EditText
          android:id="@+id/user_phone_input"
          style="@style/land_et_sty"
          android:layout_width="0dp"
          android:paddingLeft="5dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:background="@null"
          android:gravity="center_vertical"
          android:inputType="number" />

        <TextView
          android:id="@+id/send_sms"
          style="@style/center_sty"
          android:layout_width="wrap_content"
          android:layout_height="24dp"
          android:layout_marginLeft="5dp"
          android:paddingLeft="10dp"
          android:paddingRight="10dp"
          android:textColor="@color/cEA5412"
          android:background="@drawable/get_check_code_shape"
          android:text="@string/get_check_code"
          android:textSize="10sp" />
      </LinearLayout>

      <TextView
        android:id="@+id/tv_select_country"
        style="@style/center_sty"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginLeft="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/round_corner"
        android:text="@string/select_country"
        android:textColor="@color/black_deep"
        android:textSize="10sp"
        android:visibility="gone" />

    </LinearLayout>


    <TextView
      android:id="@+id/line_three"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_below="@+id/ll_phone"
      android:background="@color/cf6f6f6" />

    <LinearLayout
      android:id="@+id/ll_check_code"
      android:layout_width="match_parent"
      android:layout_height="44dp"
      android:layout_below="@+id/line_three"
      android:orientation="horizontal">


      <TextView
        style="@style/land_text_sty"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/check_code_one" />


      <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4">
        <EditText
          android:id="@+id/user_check_code_input"
          style="@style/land_et_sty"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="3"
          android:layout_marginLeft="0dp"
          android:background="@null"
          android:gravity="center_vertical"
          android:hint="@string/please_input_check"
          android:inputType="number" />


      </LinearLayout>


    </LinearLayout>


    <TextView
      android:id="@+id/line_four"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginBottom="10dp"
      android:layout_below="@+id/ll_check_code"
      android:background="@color/cf6f6f6" />


    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/line_four"
      android:gravity="center_horizontal"
      android:orientation="horizontal">

      <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/tip"
        android:src="@mipmap/i_agree_back_2x" />

      <TextView
        android:id="@+id/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:text="@string/use_declare_one"
        android:textColor="@color/black_deep"
        android:textSize="11sp" />

      <TextView
        android:id="@+id/tip_right"
        android:layout_toRightOf="@+id/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:text="@string/use_declare_ones"
        android:textColor="#1C2164"
        android:textSize="11sp" />


    </RelativeLayout>


  </RelativeLayout>


  <Button
    android:id="@+id/new_account"
    android:layout_width="match_parent"
    android:layout_height="44dp"
    android:layout_marginTop="112dp"
    android:layout_marginLeft="55dp"
    android:layout_marginRight="55dp"
    android:background="@drawable/all_blue_shape_10"
    android:text="@string/new_account"
    android:textColor="@color/white"
    android:textSize="16sp" />


</LinearLayout>
